Added any/all options for checkboxes widget. Fixed unicode/str bug in checkboxes widget. Fixed report option widgets.

--- a/static/themes/default/widgets.css
+++ b/static/themes/default/widgets.css
@@ -775,6 +775,9 @@ ul.x-tree-root-ct {
 .s3-checkboxes-widget input {
     float: left;
 }
+.s3-checkboxes-widget-filter input {
+    vertical-align: middle;
+}
 
 .widget-org-hierarchy-menu {
     overflow:auto;
