--- a/src/core/spaces/templates/spaces/user_groups.html
+++ b/src/core/spaces/templates/spaces/user_groups.html
@@ -3,11 +3,7 @@
 {% load wysiwyg %}
 
 {% block title %}
-    {% if form.title.value %}
-        {% trans "Edit event" %} {{ form.title.value }}
-    {% else %}
-        {% trans "Create a new event" %}
-    {% endif %}
+    {% trans "Edit roles" %}
 {% endblock %}
 
 {% block logo %}<a href="{{ get_place.get_absolute_url }}"><img src="{{ MEDIA_URL }}/{{ get_place.logo }}" /></a>{% endblock %}
@@ -20,123 +16,44 @@
 {% block content %}
 
 <div class="row">
-    <div class="span12">
-        {% if form.title.value %}
-        <h3>{% trans "Edit event" %} {{ form.title.value }}</h3>
-        {% else %}
-        <h3>{% trans "Create a new event" %}</h3>
-        {% endif %}
+        <h3>{% trans "Edit roles for" %} {{ get_place.name }}</h3>
 
-        <form class="form-horizontal" enctype="" action="" method="post">{% csrf_token %}
+        <form class="form" enctype="" action="" method="post">{% csrf_token %}
 
             {% if form.non_field_errors %}
-            {% for error in form.non_field_errors %}
-            <span class="help-inline">{{ error|escape }}</span>
-            {% endfor %}
+                {% for error in form.non_field_errors %}
+                    <span class="help-inline">{{ error|escape }}</span>
+                {% endfor %}
             {% endif %}
 
-            <div class="control-group {% if form.title.errors %}error{% endif%}">
-                <label>{{ form.title.label }}</label>
-                <div class="controls">
-                    <div class="input-append">
-                        {{ form.title }}
-                        {% if form.title.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.title.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
+            {% for field in form %}
+                <div class="span4">
+                    <div class="control-group {% if field.errors %}error{% endif%}">
+                        <label>{{ field.label }}</label>
+                        <div class="controls">
+                            <div class="input-prepend">
+                                {{ field }}
+                                {% if field.help_text %}
+                                    <span class="add-on"><a href="#" rel="tooltip" title="{{ field.help_text }}"><i class="icon-question-sign"></i></a></span>
+                                {% endif %}
+                            </div>
+                            {% if field.errors %}
+                                <p class="help-block">
+                                    {% for error in field.errors %}
+                                        {{ error|escape }}
+                                    {% endfor %}
+                                </p>
+                            {% endif %}
+                        </div>
                     </div>
-                    {% if form.title.errors %}
-                    <p class="help-block">
-                        {% for error in form.title.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
                 </div>
-            </div>
+            {% endfor %}
 
-            <div class="control-group {% if form.event_date.errors %}error{% endif%}">
-                <label>{{ form.event_date.label }}</label>
-                <div class="controls">
-                    <div class="input-append">
-                        <input type="text" name="event_date" id="datepicker" class="hasDatePicker">
-                        {% if form.event_date.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.event_date.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if form.event_date.errors %}
-                    <p class="help-block">
-                        {% for error in form.event_date.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
-                </div>
-            </div>
-
-            <div class="control-group {% if form.description.errors %}error{% endif%}">
-                <label>{{ form.description.label }}</label>
-                <div class="controls">
-                    <div class="input-prepend">
-                        {{ form.description }}
-                        {% wysiwyg_editor "id_description" %}
-                        {% if form.description.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.description.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if form.description.errors %}
-                    <p class="help-block">
-                        {% for error in form.description.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
-                </div>
-            </div>
-
-            <div class="control-group {% if form.location.errors %}error{% endif%}">
-                <label>{{ form.location.label }}</label>
-                <div class="controls">
-                    <div class="input-prepend">
-                        {{ form.location }}
-                        {% if form.location.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.location.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if form.location.errors %}
-                    <p class="help-block">
-                        {% for error in form.location.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
-                </div>
-            </div>
-
-            <div class="control-group {% if form.user.errors %}error{% endif%}">
-                <label>{{ form.user.label }}</label>
-                <div class="controls">
-                    <div class="input-prepend">
-                        {{ form.user }}
-                        {% if form.user.help_text %}
-                        <span class="add-on"><a href="#" rel="tooltip" title="{{ form.user.help_text }}"><i class="icon-question-sign"></i></a></span>
-                        {% endif %}
-                    </div>
-                    {% if form.user.errors %}
-                    <p class="help-block">
-                        {% for error in form.user.errors %}
-                        {{ error|escape }}
-                        {% endfor %}
-                    </p>
-                    {% endif %}
-                </div>
-            </div>
-
-            <hr />
+            <hr>
             <a href="{{ get_place.get_absolute_url }}" class="btn btn-danger btn-small">&laquo; {% trans "Cancel" %}</a>
-            <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Create' %}" />
+            <input class="btn btn-small btn-primary" type="submit" value="{% trans 'Save' %}" />
 
         </form>
-    </div>
 </div>
 
 {% endblock %}
