typo in site index template

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -41,7 +41,7 @@
             <h3 style="color:#FEFEFE;">{% trans "Advanced debate system" %}</h3>
             <p>{% blocktrans %}A new kind of debating system, based on a two-dimensional grid.
             This will allow people to organize the ideas and also get conclusions for the debate.
-            The usual threaded debate systems are very unconclusive and innefective. Let's start
+            The usual threaded debate systems are very unconclusive and ineffective. Let's start
             getting conclusions!{% endblocktrans %}</p>
         </div>
 
