--- a/private/templates/IFRC/views/layout.html
+++ b/private/templates/IFRC/views/layout.html
@@ -66,12 +66,13 @@
 <body>
  <div id='container'>
   <div id='header'>
-  <div id='society-icon'><img src='/{{=appname}}/static/themes/IFRC/img/dummy_flag.png' alt='Red Cross/Red Crescent'></div>
-  <div id='logo'><h1><a href='/{{=appname}}/default/index' title='Return to Home Page'>Resource Mapping System</a></h1><div id='region' class='big'>Asia<br>Pacific</div></div>
+   <div id='society-icon'><img src='/{{=appname}}/static/themes/IFRC/img/dummy_flag.png' alt='Red Cross/Red Crescent'></div>
+   <div id='logo'>
+    <h1><a href='/{{=appname}}/default/index' title='Return to Home Page'>Resource Mapping System</a></h1>
+    <div id='region' class='big'>Asia<br>Pacific</div>
+   </div>
    <div id='personal-menu'>
-    {{if auth.is_logged_in():}}
-     <div class="username fright">{{=auth.user.email}}</div>
-    {{pass}}
+    {{if auth.is_logged_in():}}<div class="username fright">{{=auth.user.email}}</div>{{pass}}
     {{=current.menu.personal}}
     <p>Managing material and human resources together to better prepare for future hazards and vulnerabilities.</p>
    </div>
