few correction in template index

--- a/src/e_cidadania/templates/site_index.html
+++ b/src/e_cidadania/templates/site_index.html
@@ -37,23 +37,23 @@
     <div class="row indexrow">
         <p style="font-size: 2em;line-height:30px;font-weight: bold;color:#FEFEFE;">{% trans "Features" %}</p>
 
-        <div class="span4" style="color:#FEFEFE;">
-            <h3 style="color:#FEFEFE;">{% trans "Advanced debate system" %}</h3>
+        <div class="span4" style="color:#FEFEFE; text-align: justify;">
+            <h3 style="color:#FEFEFE;">{% trans "Advanced Debate System" %}</h3>
             <p>{% blocktrans %}A new kind of debating system, based on a two-dimensional grid.
-            This will allow people to organize the ideas and also get conclusions for the debate.
+            This feature will help the people to organize thier ideas and also to get conclusions for the debate.
             The usual threaded debate systems are very unconclusive and ineffective. Let's start
             getting conclusions!{% endblocktrans %}</p>
         </div>
 
-        <div class="span4" style="color:#FEFEFE;">
-            <h3 style="color:#FEFEFE;">{% trans "Automated reports" %}</h3>
+        <div class="span4" style="color:#FEFEFE; text-align: justify;">
+            <h3 style="color:#FEFEFE;">{% trans "Automated Reports" %}</h3>
             <p>{% blocktrans %}After every participative process, e-cidadania will generate an automatic
             report based on all the data gathered during the process. After it's generated it will
             be available for all participants of the process.{% endblocktrans %}</p>
         </div>
 
-        <div class="span4" style="color:#FEFEFE;">
-            <h3 style="color:#FEFEFE;">{% trans "Proposals and voting" %}</h3>
+        <div class="span4" style="color:#FEFEFE; text-align: justify;">
+            <h3 style="color:#FEFEFE;">{% trans "Proposals and Voting" %}</h3>
             <p>{% blocktrans %}e-cidadania provides a way to do a complete participative process, from
             the debates, passing by proposals system, a secure voting system, and you can start your
             process at any point. e-cidadania will manage to follow it.{% endblocktrans %}</p>
