--- a/src/core/spaces/templates/spaces/space_index.html
+++ b/src/core/spaces/templates/spaces/space_index.html
@@ -32,7 +32,7 @@
                 {% if get_place.mod_cal %}
                 <li><a href="#events" data-toggle="tab">{% trans "Events" %}</a></li>
                 {% endif %}
-                {% if request_user in get_place.admins.all or request_user in get_place.mods.all or request_user.is_staff or request_user.is_superuser %}
+                {% if user_is_admin %} 
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Administration" %} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
@@ -134,7 +134,7 @@
                         <div class="span8">
                             {% for news in publication %}
                                 <h2 class="posttitle"><a href="{{ news.get_absolute_url }}">{{ news.post_title }}</a>
-                                    {% if request.user in get_place.admins.all or request.user in get_place.mods.all or request.user.is_staff or request.user.is_superuser %}
+                                    {% if user_is_admin %}
                                         {% if perms.news.change_post %}
                                             <a href="{% url 'edit-post' get_place.url news.id %}">
                                                 <img src="{{ STATIC_URL }}/assets/icons/edit16.png" alt="{% trans 'Edit' %}" title="{% trans 'Edit' %}"/>
@@ -158,7 +158,7 @@
                             {% endfor %}
                         </div>
                         <div class="span4 space-sidebar">
-                            {% if request_user in get_place.admins.all or request_user in get_place.mods.all or request_user.is_staff or request_user.is_superuser %}
+                            {% if user_is_admin %}
                                 {% if perms.news.add_post %}
                                     <h4>{% trans "Administration" %}</h4>
                                     <ul class="unstyled">
