--- a/views/admin/index.html
+++ b/views/admin/index.html
@@ -11,5 +11,6 @@
  <li><a href='{{=URL(f="settings")}}'><b>{{=T("Configure Run-time Settings")}}</b></a>
  <li><a href='{{=URL(c="appadmin")}}'><b>{{=T("View/Edit the Database directly")}}</b></a> - {{=T("Caution: doesn't respect the framework rules!")}}
  <li><a href='{{=URL(f="errors")}}'><b>{{=T("View Error Tickets")}}</b></a>
+ <li><a href='{{=URL(f="translate")}}'><b>{{=T("Use Translation Functionality")}}</b></a>
 </ul>
 </div>
